# Qualitative_Research_Algorithm

./: .gitignore  CLAUDE.md  CODE_REVIEW_REQUEST.md  MICROCOUNSELING_CODEBOOK.md  PHENOMENOLOGY_CODEBOOK.md  PROCESS.md  PURER.md  README.md  ROADMAP.md  SETUP.md  USAGE.md  VAAMR.md  VAAMR_FRAMEWORK.md  __init__.py  classify_and_label.py  design_decisions.md  gnn-influence-to-execution.md  masterplan.md  method-application-review.md  methodology.md  methodology.txt  methodology_assessment.md  phenomenology_codebook.md  prompt.txt  purer_specs.md  pyproject.toml  qra.py  qra_gnn_trial_run_report.md  refactor-implemented.txt  requirements.txt  run_pipeline.py  run_vamr_pipeline.py  scalable_classification_master_plan.md  test_transcript_mock_data.vtt
analysis/: README.md  __init__.py  construct.py  efficacy.py  exemplars.py  figure_data.py  figures.py  graphing.py  loader.py  longitudinal.py  mechanism.py  participant.py  purer_analysis.py  purer_figures.py  runner.py  session.py  stage_progression.py  stats.py  text_reports.py  theme.py
classification_tools/: __init__.py  classification_loop.py  data_structures.py  llm_classifier.py  llm_client.py  majority_vote.py  model_loader.py  reliability.py  response_parser.py  validation.py
codebook/: codebook_schema.py  config.py  embedding_classifier.py  ensemble.py  markdown_loader.py  microcounseling_codebook.py  phenomenology_codebook.py
codebook_classifier/: __init__.py  embedding_classifier.py  llm_classifier.py
constructs/: __init__.py  config.py  theme_schema.py  vamr.py
docs/: GNN_IMPLEMENTATION.md  ROADMAP.md  (+7 more)
(+542 files in other folders)
